--- a/templates/almalinux/8/ks.cfg
+++ b/templates/almalinux/8/ks.cfg
@@ -55,7 +55,7 @@ yum-autoupdate
 
 
 %post --log=/var/log/kickstart_post.log
-dnf install -y open-vm-tools git vim wget
+dnf install -y open-vm-tools git vim wget python3-pip
 systemctl enable chronyd
 systemctl enable sshd
 systemctl disable firewalld
