Ensure the packages are updated
This commit ensures that the packages are upgraded at the end of the
kickstart.

--- a/templates/almalinux/8/ks.cfg
+++ b/templates/almalinux/8/ks.cfg
@@ -55,6 +55,7 @@ yum-autoupdate
 
 
 %post --log=/var/log/kickstart_post.log
+dnf update -y
 dnf install -y open-vm-tools git vim wget python3-pip
 systemctl enable chronyd
 systemctl enable sshd
