--- a/templates/centos/7/ks.cfg
+++ b/templates/centos/7/ks.cfg
@@ -55,6 +55,7 @@ yum-autoupdate
 
 
 %post
+yum update -y
 yum install -y open-vm-tools git vim screen python3-pip wget
 systemctl enable ntpd
 systemctl enable sshd
