--- a/templates/rocky/8/ks.cfg
+++ b/templates/rocky/8/ks.cfg
@@ -56,6 +56,7 @@ rsyslog
 
 
 %post --log=/var/log/kickstart_post.log
+dnf update -y
 dnf install -y open-vm-tools git vim wget python3-pip
 systemctl enable chronyd
 systemctl enable sshd
